hanoi probléma egyik megoldása c-ben (nem evilági nyelven)

--- a/Mestint/Mestint/Mestint.vcxproj.filters
+++ b/Mestint/Mestint/Mestint.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="Oszlop.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Button.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
