--- a/Mestint/Mestint/Mestint.vcxproj
+++ b/Mestint/Mestint/Mestint.vcxproj
@@ -150,9 +150,14 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Allapot.h" />
     <ClInclude Include="Button.h" />
+    <ClInclude Include="Csomopont.h" />
     <ClInclude Include="Hanoi.h" />
+    <ClInclude Include="Kereso.h" />
     <ClInclude Include="Korong.h" />
+    <ClInclude Include="Melysegi.h" />
+    <ClInclude Include="Operator.h" />
     <ClInclude Include="Oszlop.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
