--- a/Mestint/Mestint/Mestint.vcxproj.filters
+++ b/Mestint/Mestint/Mestint.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Orai">
+      <UniqueIdentifier>{b354f77c-51fb-4685-b0e1-34381b042de0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -32,20 +35,23 @@
     <ClInclude Include="Button.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Kereso.h">
+    <ClInclude Include="Globals.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Allapot.h">
-      <Filter>Header Files</Filter>
+      <Filter>Orai</Filter>
+    </ClInclude>
+    <ClInclude Include="Kereso.h">
+      <Filter>Orai</Filter>
     </ClInclude>
     <ClInclude Include="Melysegi.h">
-      <Filter>Header Files</Filter>
+      <Filter>Orai</Filter>
     </ClInclude>
     <ClInclude Include="Csomopont.h">
-      <Filter>Header Files</Filter>
+      <Filter>Orai</Filter>
     </ClInclude>
-    <ClInclude Include="Operator.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Oprt.h">
+      <Filter>Orai</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
