--- a/Mestint/Mestint/Mestint.vcxproj
+++ b/Mestint/Mestint/Mestint.vcxproj
@@ -147,6 +147,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Allapot.cpp" />
+    <ClCompile Include="Korong.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
